# tpp_burning_red

./: .gitattributes  .gitignore  Cargo.toml  GameState  Makefile  README.md  firered.bsp  pokered.sh
controller/: Cargo.toml
controller/src/: bizhawk.rs  constants.rs  gamestate.rs  gfx_system.rs  item_api.rs  main.rs  personal_fr  personal_rb  pokemon.rs  warp_connections.rs
docs/: buildflags.md  glitchcity.md  itemapi.md
pokered/: Makefile  audio.asm  buildflags.asm  constants.asm  home.asm  main.asm  pokered.sn1  text.asm  wram.asm  wram_contents.asm  wram_contents_api.asm
pokered/audio/: engine_1.asm  engine_2.asm  engine_3.asm
pokered/constants/: hide_show_constants.asm  item_api_constants.asm  map_constants.asm  misc_constants.asm  pokedex_constants.asm  pokemon_constants.asm  rst.asm
pokered/data/: base_stats.asm  cries.asm  evos_moves.asm  map_header_banks.asm  map_songs.asm  mon_palettes.asm  mon_party_sprites.asm  pokedex_entries.asm  pokedex_order.asm  prize_mon_levels.asm  prizes.asm  sgb_border.asm  super_palettes.asm  title_mons.asm  warp_tile_ids.asm  wild_mons.asm
pokered/engine/: HoF_room_pc.asm  cable_club.asm  display_pokedex.asm  evolution.asm  evos_moves.asm  get_bag_item_quantity.asm  hall_of_fame.asm  hidden_object_functions7.asm  hp_bar.asm  in_game_trades.asm  init_player_data.asm  intro.asm  joypad.asm  oak_speech.asm  oak_speech2.asm  predefs12.asm  print_number.asm  print_waiting_text.asm  save.asm  slot_machine.asm  titlescreen.asm  trade.asm  (+2 more)
src/: bizhawk.rs  constants.rs  gamestate.rs  main.rs  pokemon.rs  warp_connections.rs
(+148 files in other folders)
