[package]
name = "tpp_burning_red"
version = "0.1.0"
authors = ["Aissurteivos <traviz1232@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.0.1"
bit_field = "0.9.0"
bitvec = "0.9.0"
maplit = "1.0.1"
reqwest = "0.8.8"
strum = "0.10.0"
strum_macros = "0.10.0"
itertools = "0.7.11"
byteorder = "1.2.7"
phf = "0.7.23"
phf_macros = "0.7.23"
lazy_static = "1.2.0"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"